syntax = "proto3";

package example.maps;

option go_package = "github.com/mzeeshanali/go-proto-buff/proto";

message IdWrapper {
  int32 id = 1;
}

message MapExample {
  map<string, IdWrapper> ids = 1;
}